# data_science_tutorial

./: .gitignore  .pre-commit-config.yaml  00_index.ipynb  01_text_classification.ipynb  LICENSE  Makefile  Procfile  README.md  commands.py  environment.yml  index.html  index.ipynb  jupyter_notebook_config.py  links.txt  nbdev.yml  numpy.html  numpy.ipynb  pandas.html  pandas.ipynb  performance.txt  pyproject.toml  robots.txt  search.json  settings.ini  setup.md  setup.py  sidebar.yml  sitemap.xml  text_classification.html  text_classification.ipynb
data_science_tutorial/: _modidx.py
ds_tut/: _modidx.py  io.py
ds_tutorial/: .datasets.py.swp  datasets.py
ds_tutorial_old/: transformers.py  utils.py
nbs/: 00_io.ipynb  index.ipynb  nbdev.yml  sidebar.yml
notebooks/: cloud_gpu.ipynb  just_test.ipynb  perceptron.ipynb  test.ipynb  tutorial.ipynb
notebooks/cats_vs_dogs/: dl_workshop.ipynb  feature_extraction.ipynb  fine_tuning.ipynb  model_feature_extraction.ipynb  model_fine_tuning.ipynb  model_from_scratch.ipynb  model_from_scratch_colab.ipynb  model_with_augmentation.ipynb  prepare_training_data.ipynb
notebooks/dask/: 01-custom-delayed.ipynb  05-nyc-taxi.ipynb
notebooks/numpy_pandas/: js_indexing.ipynb  numpy.ipynb  pandas.ipynb
notebooks/text_classification/: explore_data.ipynb  feature_pipelines.ipynb  grid_search.ipynb  (+8 more)
slides/: Introduction Numpy:Pandas ds_tutorial.key  sklearn feature engeneering Kopie.key
stuff/: Untitled.ipynb  commands.py  gitignore.old  issue_bench.py  macbook_pro_2019  pyproject.toml.old  raw_apple_tensorflow_cats_vs_dogs.py
(+14 files in other folders)
