[tool.poetry]
name = "ds_tutorial"
version = "0.0.1"
description = "Little bit datascience stuff"
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ephes/data_science_tutorial"
keywords = [
    "data science", "keras", "classification", "clustering", "tutorial"
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
packages = [
    { include = "./commands.py" },
]

[tool.poetry.dependencies]
python = "3.8.3"
scikit-learn = "^0.23.1"
jupyter = "^1.0.0"
tensorflow = "^2.2.0"
tqdm = "^4.46.1"
xgboost = "^1.1.1"
pandas = "^1.0.4"
dask = {extras = ["complete"], version = "^2.18.1"}
distributed = "^2.18.0"
typer = "^0.2.1"
s3fs = "^0.4.2"

[tool.poetry.scripts]
test = "commands:pytest"
lint = "commands:flake8"
autoformat = "commands:black"
show_coverage = "commands:coverage"
docs = "commands:docs"
notebook = "commands:notebook"
clean-pyc = "commands:clean_pyc"
clean = "commands:clean"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

